# virtual-java

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  array.c  array.h  bool.h  chain.c  chain.h  channels.c  channels.h  cpu_instruction_set.h  cstring.h  event.c  event.h  event_dispatcher.c  event_dispatcher.h  garbage_collector.c  garbage_collector.h  gramm.y  graph.c  graph.h  heap.c  heap.h  includes.h  interpreter.c  interpreter.h  interprocess.h  java.l  java.y  linker.h  list.c  list.h  logger.c  logger.h  main.c  map.h  math.c  (+35 more)
.metadata/: version.ini
include/: bool.h  chain.h  channels.h  class_loader.h  cpu_instruction_set.h  cstring.h  edmonds-karp.c  event.h  event_dispatcher.h  garbage_collector.h  graph.h  heap.h  interprocess.h  linker.h  list.h  logger.h  map.h  math.h  matrix.h  mmalloc.h  nullptr.h  opcodes.h  parser.h  priority_queue.h  queue.h  semaphore_queue.h  set.h  smart_pointer.h  sort.h  stack.h  try_catch.h  typedef.h  uni_queue.h  vector.h  virtual_machine.h
src/: chain.c  clustering.c  clustering.cpp  encoding.c  event.c  floyd-warshall.c  floyd-warshall.cpp  garbage_collector.c  graph.c  heap.c  humming.c  lightweight-java.c  linker.c  list.c  main.c  map.c  math.c  matrix.c  matrix_transpose.c  matrix_transpose.cpp  mmalloc.c  nns.c  parser.c  priority_queue.c  pyramidal.c  queue.c  semaphore_queue.c  set.c  smart_pointer.c  smart_pointer_p.h  sort.c  stack.c  string.c  unified-cost-search.c  vector.c  version-control.c  virtual_machine.c
test/: a.out  cunit.c  cunit_example.c  matrix-test-01.c  vector-test-01.c
(+14 files in other folders)
